[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,6 +4,7 @@
             Article One /ThillaiRavi
             
         </title>
+        <meta name='vienport' content='width=device-width, initial-scale=1' />
     </head>
     <body>
         <div>
