--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -11,9 +11,10 @@
                 margin: @ auto;
                 color: grey;
                 font-family: sans-serif;
+                padding-top: 60px;
+                padding-left: 20px;
+                padding-right: 20px;
             }
-                
-            
         </style>
     </head>
     <body>
