--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,6 +6,15 @@
         </title>
         <meta name='vienport' content='width=device-width, initial-scale=1' />
         <style>
+          .container {
+                max-width: 800px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sans-serif;
+                padding-top: 60px;
+                padding-left: 20px;
+                padding-right: 20px;
+            }
             
         </style>
     </head>
