--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -5,6 +5,8 @@
             
         </title>
         <meta name='vienport' content='width=device-width, initial-scale=1' />
+        <link href="/ui/style.css" rel="stylesheet" />
+
     </head>
     <body>
         <div>
