--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -9,6 +9,7 @@
 
     </head>
     <body>
+      <div class='container'>   
         <div>
             <a href = '/'> Home</a>
         </div>
@@ -38,5 +39,6 @@
              
             
         </div>
+      </div>    
     </body>
 </HTML>
