--- a/ui/index.html
+++ b/ui/index.html
@@ -4,18 +4,24 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+      <div class="container">    
         <div  class="center">
             <img id="madi" src="/ui/madi.png" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div id="main-text" class="center text-big bold">
-            Hi! I am thillai it is my first webapp.
-            <h4> A new heading </h4>
-            I have made some new local changes.
+        <h3> Personal</h3>
+            Hi! I am thillai.
+            <hr/>
+            <h3> professional </h3>
+        <div>    
+            I am freelance software developer.
         </div>
-        <script>
-            alert("Hi, I\'m Javascript!");
-        </script>
+        <hr/>
+        <div class= "Footer">
+            
+        </div>
+      </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
