--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
         </div>
         <hr/>
         <div class= "Footer">
-            
+           This button <button id= "counter" > click me </button> has been clicked <span id= "count" >0 </span> times.
         </div>
         </div>
       </div>
