--- a/ui/index.html
+++ b/ui/index.html
@@ -20,6 +20,15 @@
         <hr/>
         <div class= "Footer">
            This button <button id= "counter" > click me </button> has been clicked <span id= "count" >0 </span> times.
+           <hr/>
+           <input type="text" id="name" placeholder="name"><input/>
+           <input type= "submit" id= "submit"><input/>
+           <ul>
+               <li>name1</li>
+               <li>name2</li>
+               <li>name3</li>
+               <li>name4</li>
+           </ul>
         </div>
         </div>
       </div>
