--- a/ui/index.html
+++ b/ui/index.html
@@ -22,7 +22,7 @@
            This button <button id= "counter" > click me </button> has been clicked <span id= "count" >0 </span> times.
            <hr/>
            <input type="text" id="name" placeholder="name"><input/>
-           <input type= "submit" id= "submit"><input/>
+           <input type= "submit" id= "submit-btn"><input/>
            <ul>
                <li>name1</li>
                <li>name2</li>
