[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,17 +19,14 @@
             I am freelance software developer.
         </div>
         <hr/>
+        <h3>Login tounlock awesome features</h3>
+         <div>
+         <input type="username" id="username" placeholder="username"/> 
+          <input type="password" id="password"/>
+          <input type="button" id="submit_btn"/>
+         </div> 
         <div class= "Footer">
-           This button <button id= "counter" > click me </button> has been clicked <span id= "count" >0 </span> times.
-           <hr/>
-           <input type="text" id="name" placeholder="name"> </input>
-           <input type= "submit" id= "submit-btn" value= "Submit"> </input>
-           <ul>
-               <li>name1</li>
-               <li>name2</li>
-               <li>name3</li>
-               
-           </ul>
+          
         </div>
         </div>
       </div>
