[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,7 @@
          <div>
          <input type="username" id="username" placeholder="username"/> 
           <input type="password" id="password"/>
-          <input type="button" id="submit_btn"/>
+          <input type="button" id="submit_btn" placeholder="submit"/>
          </div> 
         <div class= "Footer">
           
