--- a/ui/index.html
+++ b/ui/index.html
@@ -21,9 +21,9 @@
         <hr/>
         <h3>Login tounlock awesome features</h3>
          <div>
-         <input type="username" id="username" placeholder="username"/> 
+         <input type="text" id="username" placeholder="username"/> 
           <input type="password" id="password"/>
-          <input type="button" id="submit_btn" placeholder="submit"/>
+          <input type="submit" id="submit_btn"/>
          </div> 
         <div class= "Footer">
           
